# optionTracker

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  requirements.md  ruff.toml  start.sh
app/: config.py  database.py  db_libsql_async.py  main.py
app/analysis/: exposure.py  option_greeks.py  risk_calculator.py  strategy_detector.py
app/api/: accounts.py  dashboard.py  deps.py  flex.py  import_csv.py  me.py  positions.py  prices.py  reports.py  screener.py  strategies.py  sync.py
app/auth/: __init__.py  config.py  middleware.py  oauth.py  routes.py  session.py
app/dashboard/: app.py  components.py  tokens.py
app/models/: __init__.py  account.py  detected_strategy.py  earnings_date.py  market_price.py  metadata.py  open_option.py  screener.py  strategy_leg.py  trade.py  user.py
app/parsers/: csv_parser.py  option_symbol.py
app/schemas/: __init__.py  flex.py  option.py  position.py  risk.py  screener.py  strategy.py
app/services/: account_service.py  earnings_service.py  flex_service.py  import_service.py  market_price_service.py  position_service.py  price_service.py  report_service.py  screener_service.py  strategy_service.py  sync_service.py  user_service.py  yahoo_data_service.py
app/utils/: cache.py  http_client.py  xml_parser.py
notebooks/: screener.ipynb  screener_prototype.ipynb
notebooks/.ipynb_checkpoints/: screener_prototype-checkpoint.ipynb
scripts/: generate_pwa_icons.py
tests/unit/: test_csv_parser.py  test_database.py  test_db_libsql_async.py  test_exposure.py  (+12 more)
(+19 files in other folders)
