[project]
name = "ibkr-options-analyzer"
version = "2.0.0"
description = "Track and analyze IBKR option positions across multiple accounts"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "dash>=2.18",
    "plotly>=5.24",
    "dash-bootstrap-components>=1.6",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "libsql-experimental>=0.0.55",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "defusedxml>=0.7",
    "python-multipart>=0.0.9",
    "authlib>=1.3",
    "yfinance>=0.2",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "httpx",  # for TestClient
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
